# specreduce

./: .gitignore  .readthedocs.yaml  .rtd-environment.yml  .travis.yml  CHANGES.rst  CITATION.cff  CLAUDE.md  MANIFEST.in  README.md  README.rst  conftest.py  environment-dev.yml  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: cron-tests.yml  publish-to-pypi.yml  tox-tests.yml
.run/: Template Python tests.run.xml
docs/: api.rst  background.rst  conf.py  contributing.rst  extinction.rst  extraction.rst  extraction_quickstart.rst  index.rst  installation.rst  quickstart.rst  specphot_standards.rst  terms.rst  trace.rst  user_guide.rst  wavelength_calibration.rst
docs/getting_started/: common.py  index.rst  quickstart.ipynb  quickstart.py
docs/mask_treatment/: mask_treatment.rst
docs/process/: MOS_science.odg  NIR_MOS_flat.odg  NIR_MOS_trace.odg  NIR_arcs.rst  NIR_flats.rst  NIR_science_data.rst  index.rst  science_data.rst
docs/specreduce/process/: NIR_MOS_arc.odg  NIR_MOS_science.odg  NIR_arcs.rst  NIR_flats.rst
docs/tilt_correction/: common.py  osiris_example.ipynb  tilt_correction.ipynb  tilt_correction.rst
docs/tilt_correction/gtc_osiris_example/: osiris_arc_HgAr.fits.bz2  osiris_arc_Ne.fits.bz2  osiris_arc_Xe.fits.bz2  osiris_bias.fits.bz2  osiris_tres_3b.fits.bz2
docs/wavelength_calibration/: osiris_arcs.fits  shane_kast_blue_600_4310_d55.fits  wavecal1d_example_01.ipynb  wavecal1d_example_02.ipynb  wavecal1d_example_03.ipynb  wavelength_calibration.rst
licenses/: KOSMOS_LICENSE  LICENSE.rst
notebook_sandbox/: README.md  compare_extractions.ipynb  dev.ipynb  flatfield_demo.ipynb  fluxcal_demo.ipynb  identify_demo.ipynb  longslit_blocks.py  tracing_options.ipynb  wavecal_1d_shane.ipynb  wavecal_demo.ipynb  wavelength_calibration_proposal.py
notebook_sandbox/horne_extract/: horne_uncertainty_testing.ipynb  optimal_extract_VLT.ipynb  requirements.txt
notebook_sandbox/jwst_boxcar/: boxcar_extraction.ipynb  jwst_boxcar_algorithm.ipynb  requirements.txt  tracing_options.ipynb
notebook_sandbox/sky_subtraction/: bspline.ipynb
specreduce/: __init__.py  _astropy_init.py  background.py  build_nist_table.py  calibration_data.py  compat.py  conftest.py  core.py  cython_version.py  extract.py  fluxcal.py  fuckmeupfam.py  image.py  line_list_utils.py  line_matching.py  lswavecal1d.py  lswavecal2d.py  table_utils.py  target_identify.py  tilt_correction.py  tracing.py  version.py  wavecal.py  wavecal1d.py  wavelength_calibration.py  wavesol1d.py
specreduce/data/line_lists/NIST/: nist_air_strong_lines_Ar.txt  nist_air_strong_lines_Cd.txt  nist_air_strong_lines_Cu.txt  nist_air_strong_lines_Fe.txt  nist_air_strong_lines_He.txt  nist_air_strong_lines_Hg.txt  nist_air_strong_lines_Kr.txt  nist_air_strong_lines_Ne.csv  nist_air_strong_lines_Si.txt  nist_vac_strong_lines_Cu.txt  nist_vac_strong_lines_Si.txt
specreduce/datasets/: __init__.py  setup_package.py
specreduce/datasets/line_lists/NIST/: NIST_combined.csv  nist_air_strong_lines_Xe.txt  nist_vac_strong_lines_Ar.txt  nist_vac_strong_lines_Cd.txt  nist_vac_strong_lines_He.txt  nist_vac_strong_lines_Hg.txt  nist_vac_strong_lines_Kr.txt  nist_vac_strong_lines_Ne.txt  nist_vac_strong_lines_Xe.txt
specreduce/datasets/onedstds/: README.md  names.men
specreduce/datasets/onedstds/eso/Xshooter/: aaareadme.Xshooterspec  fix.py
specreduce/datasets/onedstds/eso/ctiostan/: aaareadme.ctio
specreduce/datasets/onedstds/eso/hststan/: aaareadme.hst
specreduce/datasets/onedstds/eso/okestan/: aaareadme.oke
specreduce/datasets/onedstds/eso/wdstan/: aaareadme.wdstan
specreduce/tests/: test_align_along_trace.py  test_background.py  test_boxcar_error_prop.py  test_build_nist_table.py  test_core.py  test_extinction.py  test_extract.py  test_fit_gaussian_spatial_profile_error_prop.py  test_get_reference_file_path.py  test_horne_error_prop.py  test_image_parsing.py  test_line_list_utils.py  test_line_matching.py  test_linelists.py  test_mask_treatment.py  test_nist.py  test_specphot_stds.py  test_srimage.py  test_synth_data.py  test_tilt_correction.py  test_tracing.py  test_utils.py  test_wavecal1d.py  test_wavelength_calibration.py  test_wavesol1d.py
specreduce/tests/data/: transposed_det_image_seq5_MIRIMAGE_P750Lexp1_s2d.fits
specreduce/utils/: __init__.py  load_nist_data.py  nist.py  nist_web_data.py  synth_data.py  utils.py
