[metadata]
name = specreduce
author = Astropy Specreduce contributors
author_email = astropy-dev@googlegroups.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://astropy.org/
description = Astropy affiliated package for Spectroscopic Reductions
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/specreduce

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy

[options.entry_points]

[options.extras_require]
all =
    specutils
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
specreduce = datasets/*

[tool:pytest]
testpaths = "specreduce" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    specreduce/_astropy_init*
    specreduce/conftest.py
    specreduce/*setup_package*
    specreduce/tests/*
    specreduce/*/tests/*
    specreduce/extern/*
    specreduce/version*
    */specreduce/_astropy_init*
    */specreduce/conftest.py
    */specreduce/*setup_package*
    */specreduce/tests/*
    */specreduce/*/tests/*
    */specreduce/extern/*
    */specreduce/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
